--- a/views/user/forgetpassword.ejs
+++ b/views/user/forgetpassword.ejs
@@ -55,6 +55,7 @@
         }
     </style>
 </head>
+<%- include('../partials/navbar') %>
 <body>
     <div class="container">
         <div class="row justify-content-center align-items-center" style="height: 100vh;">
@@ -79,3 +80,5 @@
     </div>
 </body>
 </html>
+
+<%- include('../partials/user-footer') %>
