--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -18,58 +18,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="/assets/images/logo.png" alt="Logo" height="40">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/userhome">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Category
-            </a>
-            <% console.log(categories); %>
-            <ul class="dropdown-menu">
-              
-              <% categories.forEach(category => { %>
-                <% if (!category.isBlocked) { %>
-                <li><a class="dropdown-item" href="/products/<%= category.categoryName %>"><%= category.categoryName %></a></li>
-                <% } %>
-                <% }); %>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contacts</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search" style="margin-right: 10px;">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-        <div class="icons">
-          <a href="/profile">
-            <i class="fa fa-user text-dark" aria-hidden="true"></i>
-          </a>
-          <a href="/cart">
-            <i class="fa fa-shopping-cart text-dark" aria-hidden="true"></i>
-          </a>
-          <a href="#">
-            <i class="fa fa-heart text-dark" aria-hidden="true"></i>
-          </a>
-        </div>
-      </div>
-    </div>
-  </nav>
+  <%- include('../partials/navbar') %>
 
   <div class="item mt-4"></div>
  
@@ -147,11 +96,7 @@
   <% } else { %>
     <button class="btn btn-dark btn-sm" type="button" onclick="updateCartQuantity('<%= item._id %>', -1)" id="decrementButton">-</button>
   <% } %>
-<<<<<<< HEAD
   <input type="number" class="form-control allQuantity" value="<%= item.quantity %>" id="cartQuantity<%= item._id %>" min="1" max="<%= item.productId?.AvailableQuantity || 1 %>" onchange="updateCartQuantity('<%= item._id %>', this.value)">
-=======
-  <input type="number" class="form-control allQuantity" value="<%= item.quantity %>" id="cartQuantity<%= item._id %>" min="1" max="<%= item.productId?.AvailableQuantity || 0 %>" onchange="updateCartQuantity('<%= item._id %>', this.value)">
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
   <% if (item.quantity >= item.productId?.AvailableQuantity) { %>
     <button disabled class="btn btn-dark btn-sm" type="button" onclick="updateCartQuantity('<%= item._id %>', 1)">+</button>
   <% } else { %>
@@ -159,15 +104,9 @@
   <% } %>
 </div>
 
-<<<<<<< HEAD
 <% if (item.productId?.AvailableQuantity == 0) { %>
     <p class="text-danger">Out of Stock</p>
   <% } %>
-=======
-<% if(item.productId?.AvailableQuantity == 0){ %>
-    <p style="color: red;">Out of Stock</p>
-<% } %>
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
 
                         
                         </td>
@@ -315,11 +254,7 @@
       alert("Some items in your cart have a quantity exceeding the available stock." );
       return
     } else {
-<<<<<<< HEAD
       window.location.href = "/checkout";
-=======
-      // window.location.href = "/checkout";
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
     }
   });
 </script>
