--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -14,6 +14,7 @@
   </head>
   <body>
     <%- include("header") %>
+    <%- include('../partials/navbar') %>
  <header class="intro">
  <!-- <h1> Bootstrap 5 Checkout Form Example </h1>
  <p> A checkout form page with Bootstrap native input fields.</p> -->
@@ -128,10 +129,6 @@
                             <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" value="Wallet" required>
                             <label class="custom-control-label" for="debit">Wallet</label>
                           </div>
-                          <div class="custom-control custom-radio">
-                            <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" value="Wallet" required>
-                            <label class="custom-control-label" for="debit">Wallet</label>
-                          </div>
                     </div>
 
                     <!-- Your Cart Column -->
@@ -157,7 +154,6 @@
                                 </div>
                             </li>
                         <% }); %>
-<<<<<<< HEAD
 
                          <!-- Delivery charge (if applicable) -->
  <% if (totalPrice < 1000) { %>
@@ -175,52 +171,23 @@
                 <% totalPrice += deliveryCharge %>
                 <% } %>
             <strong>₹ <%= totalPrice  %></strong>
-=======
-                    
-                    <!-- <li class="list-group-item d-flex justify-content-between bg-light" style="margin-top: 10px;">
-                       <div class="text-success">
-                        <h6 class="my-0">Promo code</h6>
-                         <small>EXAMPLECODE</small> 
-                      </div> -->
-                      <!-- <span class="text-success">-$5</span> 
-                    </li> -->
-                     <!-- Total Price -->
-        <li id="totalPrice" class="list-group-item d-flex justify-content-between" style="margin-top: 10px;">
-            <span>Total Price:</span>
-            <strong>₹ <%= totalPrice %></strong>
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
         </li>
 
 
 
                     <!-- Coupon Code Input Field -->
-        <li class="list-group-item">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Enter Coupon Code" id="couponCodeInput">
-                <button class="btn btn-outline-secondary" type="button" id="applyCouponBtn">Apply</button>
-            </div>
-        </li>
-<<<<<<< HEAD
+                    <li class="list-group-item">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Enter Coupon Code" id="couponCodeInput">
+                            <button class="btn btn-outline-secondary" type="button" id="applyCouponBtn">Apply</button>
+                            <button class="btn btn-outline-secondary" type="button" id="removeCouponBtn" style="display: none;">Remove</button>
+                        </div>
+                    </li>
            </ul>
-                       
+           <div id="errorContainer" style="display: none;" class="alert alert-danger" role="alert">
+            <!-- Error message will be displayed here -->
+        </div>
                         <form class="card p-2">              
-=======
-
-
-
-        <!-- Show Available Coupons Button -->
-<!-- <div class="mb-3">
-    <button type="button" class="btn btn-primary" id="showCouponsBtn">Show Available Coupons</button>
-</div> -->
-
-
-                        </ul>
-                        <!-- Cart summary and form -->
-                        <form class="card p-2">
-                            <!-- Cart summary, promo code input, etc. -->
-                            <!-- Add your cart summary, promo code input, etc. here -->
-                        
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
                     </div>
                 </div>
                 <!-- Continue to checkout button -->
@@ -242,6 +209,7 @@
 
   </body>
 </html>
+<%- include('../partials/user-footer')  %>
 
 <script>
   // Client-side JavaScript code
@@ -275,10 +243,7 @@
                  // Address added successfully
                  document.getElementById('newAddressForm').style.display = 'none'; // Hide the form
                  // Fetch and update the address list dynamically
-<<<<<<< HEAD
                  location.reload();
-=======
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
                  await updateAddressList();
              } else {
                  console.error('Failed to add address:', response.statusText);
@@ -386,6 +351,9 @@
 </script>
 <script>
 document.addEventListener('DOMContentLoaded', function() {
+    const applyCouponBtn = document.getElementById('applyCouponBtn');
+    const removeCouponBtn = document.getElementById('removeCouponBtn');
+   
     document.getElementById('applyCouponBtn').addEventListener('click', async function() {
         const couponCode = document.getElementById('couponCodeInput').value;
         try {
@@ -398,20 +366,48 @@ document.addEventListener('DOMContentLoaded', function() {
             });
             if (response.ok) {
                 const data = await response.json();
-                // Update the total price displayed on the frontend with the discounted price
+               
                 document.getElementById('totalPrice').textContent = `Total Price: ₹ ${data.totalPrice}`;
+                applyCouponBtn.style.display = 'none';
+                    removeCouponBtn.style.display = 'block';
                 console.log(data);
             } else {
-                console.error('Failed to apply coupon:', response.statusText);
+                const errorData = await response.json(); // Parse the error JSON
+            // Display the error message in the UI
+            document.getElementById('errorContainer').style.display = 'block';
+            document.getElementById('errorContainer').textContent = errorData.error;
+            console.error('Failed to apply coupon:', errorData.error);
             }
         } catch (error) {
             console.error('Error applying coupon:', error);
         }
     });
+    document.getElementById('removeCouponBtn').addEventListener('click', async function() {
+    try {
+        const response = await fetch('/removecoupon', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+        });
+        if (response.ok) {
+            const data = await response.json();
+            // Update the total price displayed on the frontend with the original price (without discount)
+            document.getElementById('totalPrice').textContent = `Total Price: ₹ ${data.totalPrice}`;
+            const couponCode = document.getElementById('couponCodeInput')
+            couponCode.value = ''
+            applyCouponBtn.style.display = 'block';
+            removeCouponBtn.style.display = 'none';
+        } else {
+            console.error('Failed to remove coupon:', response.statusText);
+        }
+    } catch (error) {
+        console.error('Error removing coupon:', error);
+    }
+});
 });
 </script>
 
-<<<<<<< HEAD
 <script>
 document.addEventListener('DOMContentLoaded', function() {
     const continueToCheckoutBtn = document.querySelector('button[type="submit"]');
@@ -487,7 +483,5 @@ document.addEventListener('DOMContentLoaded', function() {
 
 
 
-=======
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
 
  
