--- a/views/user/orderdetails.ejs
+++ b/views/user/orderdetails.ejs
@@ -32,6 +32,7 @@
 </head>
 
 <body>
+    <%- include('../partials/navbar') %>
 
     <!-- Navbar/Header (Assuming the header is included using an external file) -->
     <header>
@@ -212,60 +213,38 @@
                         headers: {
                             'Content-Type': 'application/json',
                         },
-<<<<<<< HEAD
                         body: JSON.stringify({ orderId: '<%= order._id %>',paymentMethod: '<%= order.paymentMethod %>' }), // Send the order ID
                     })
                     .then(response => {
                         console.log(response,'========');
-=======
-                        body: JSON.stringify({ orderId: '<%= order._id %>' }), // Send the order ID
-                    })
-                    .then(response => {
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
                         if (response.ok) {
                             // If the request was successful, display a SweetAlert message
                             swal("Success!", "Order cancelled successfully.", "success")
                             .then(() => {
                                 // Reload the page after the user clicks "OK"
-<<<<<<< HEAD
                                 // window.location.reload();
-=======
-                                window.location.reload();
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
                                 document.querySelector('.badge.bg-success').textContent = 'Cancelled';
                             });
                         } else {
                             // If there was an error, display a SweetAlert error message
-<<<<<<< HEAD
                             swal("Success!", "Order cancelled successfully.", "success")
                             // window.location.href = '/orders'
                             // swal("Error!", "Failed to cancel order. Please try again later.", "error");
-=======
-                            swal("Error!", "Failed to cancel order. Please try again later.", "error");
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
                         }
                     })
                     .catch(error => {
                         console.error('Error:', error);
                         // If there was an error, display a SweetAlert error message
-<<<<<<< HEAD
                         swal("Success!", "Order cancelled successfully.", "success")
                         // window.location.href = '/orders'
                         // swal("Error!", "Failed to cancel order. Please try again later.", "error");
-=======
-                        swal("Error!", "Failed to cancel order. Please try again later.", "error");
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
                     });
                 } catch (error) {
                     console.error('Error:', error);
                     // If there was an error, display a SweetAlert error message
-<<<<<<< HEAD
                     swal("Success!", "Order cancelled successfully.", "success")
                     // window.location.href = '/orders'
                     // swal("Error!", "Failed to cancel order. Please try again later.", "error");
-=======
-                    swal("Error!", "Failed to cancel order. Please try again later.", "error");
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
                 }
             } else {
                 // If the user cancels, do nothing
@@ -274,7 +253,6 @@
         });
     });
 </script>
-<<<<<<< HEAD
 
 
 <script>
@@ -451,8 +429,6 @@ async function downloadInvoice(orderId) {
 
 
 
-=======
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
 
 
 <script>
