--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -116,6 +116,7 @@
                     countdownText.style.display = 'none';
                     const resendOtpContainer = document.getElementById('resendOtpContainer');
                     resendOtpContainer.innerHTML = '<a href="#" onclick="resendOTP()" class="text-decoration-none ms-3">Resend OTP</a>';
+                    timer = 60;
                 }
                 timer--;
             }
@@ -185,6 +186,7 @@
    
    <script>
     // Function to handle OTP resend
+    
     async function resendOTP() {
     try {
         const response = await fetch('/resendOtp', {
@@ -195,12 +197,21 @@
         });
         const data = await response.json();
         if (data.success) {
-            clearInterval(countdownInterval);
+            let countdownInterval;
+
+                clearInterval(countdownInterval);
+
+            
             let timer = 60;
             const countdownText = document.getElementById('countdownText');
             const countdown = document.getElementById('countdown');
+            countdownText.style.display = 'block';
+            console.log( countdownText.style.display, 'style');
+            console.log('inside if---',countdown,countdownText)
             const updateCountdown = function () {
+                console.log(countdown,'--inside function')
                 countdown.textContent = timer;
+                
                 if (timer <= 0) {
                     clearInterval(countdownInterval);
                     countdownText.style.display = 'none';
@@ -210,7 +221,7 @@
                 timer--;
             };
             updateCountdown();
-            const countdownInterval = setInterval(updateCountdown, 1000);
+             countdownInterval = setInterval(updateCountdown, 1000);
 
             // Show success message
             const successMessage = document.getElementById('successMessage');
