--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,7 @@
   <title>User Profile</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <style>
@@ -15,10 +17,10 @@
   </style>
 </head>
 <body>
-
+  <%- include('../partials/navbar') %>
   <!-- Navbar/Header (Assuming the header is included using an external file) -->
   <div style="height: 40px;"></div>
-
+<!-- 
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
@@ -70,7 +72,7 @@
         </div>
       </div>
     </div>
-  </nav>
+  </nav> -->
   <!-- <div class="margin-top:30px;"></div> -->
   
  
