--- a/views/admin/editproduct.ejs
+++ b/views/admin/editproduct.ejs
@@ -42,10 +42,15 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/admin/banner">
+              <i class="fa fa-bars"></i> Banners
+            </a>
+          </li>
+          <!-- <li class="nav-item">
             <a class="nav-link" href="/admin/productoffer">
               <i class="fa fa-bars"></i> ProductOffer
             </a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="/admin/sales">
               <i class="fa fa-line-chart"></i> Sales
@@ -129,12 +134,12 @@
                                 placeholder="Enter base price" value="<%= product.Price %>" required />
                             </div>
                             <br>
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                               <label for="discountAmount">Discount Amount:</label>
                               <input type="number" name="DiscountAmount" class="form-control bg-light"
                                 id="discountAmount" placeholder="Enter  After discount amount"
                                 value="<%= product.DiscountAmount %>" required />
-                            </div>
+                            </div> -->
                           </div>
 
                           <div class="">
