--- a/views/admin/sales.ejs
+++ b/views/admin/sales.ejs
@@ -39,10 +39,15 @@
       </a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" href="/admin/banner">
+        <i class="fa fa-bars"></i> Banners
+      </a>
+    </li>
+    <!-- <li class="nav-item">
       <a class="nav-link" href="/admin/productoffer">
         <i class="fa fa-bars"></i> ProductOffer
       </a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link" href="/admin/sales">
         <i class="fa fa-line-chart"></i> Sales
@@ -78,11 +83,11 @@
         </div>
     </div>
 
-    <div class="row mb-3">
+    <!-- <div class="row mb-3">
       <div class="col-md-12">
           <button class="btn btn-primary" onclick="generatePDF()">Generate PDF</button>
       </div>
-  </div>
+  </div> -->
     <!-- Sales report card -->
      <!-- Sales report card -->
      <div class="row">
