--- a/views/admin/addbrand.ejs
+++ b/views/admin/addbrand.ejs
@@ -43,10 +43,15 @@
       </a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" href="/admin/banner">
+        <i class="fa fa-bars"></i> Banners
+      </a>
+    </li>
+    <!-- <li class="nav-item">
       <a class="nav-link" href="/admin/productoffer">
         <i class="fa fa-bars"></i> ProductOffer
       </a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link" href="/admin/sales">
         <i class="fa fa-line-chart"></i> Sales
