--- a/views/admin/addcategory.ejs
+++ b/views/admin/addcategory.ejs
@@ -40,20 +40,21 @@
       </a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" href="/admin/banner">
+        <i class="fa fa-bars"></i> Banners
+      </a>
+    </li>
+    <!-- <li class="nav-item">
       <a class="nav-link" href="/admin/productoffer">
         <i class="fa fa-bars"></i> ProductOffer
       </a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link" href="/admin/sales">
         <i class="fa fa-line-chart"></i> Sales
       </a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/sales">
-        <i class="fa fa-line-chart"></i> Sales
-      </a>
-    </li>
+   
     <li class="nav-item">
       <a class="nav-link" href="/admin/logout">
         <i class="fa fa-sign-out"></i> Logout
