--- a/views/admin/admindashboard.ejs
+++ b/views/admin/admindashboard.ejs
@@ -37,9 +37,9 @@
   <a href="/admin/order"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Orders</a>
   <a href="/admin/coupon"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Coupons</a>
   <a href="/admin/banner"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Banners</a>
-  <a href="/admin/productoffer"><i class="fa fa-sign-out" style="margin-right: 10px;" aria-hidden="true"></i>ProductOffer</a>
+  <!-- <a href="/admin/productoffer"><i class="fa fa-sign-out" style="margin-right: 10px;" aria-hidden="true"></i>ProductOffer</a> -->
   <a href="/admin/sales"><i class="fa fa-line-chart" style="margin-right: 10px;" aria-hidden="true"></i>Sales</a>
-  <a href="/admin/adminlogin"><i class="fa fa-sign-out" style="margin-right: 10px;" aria-hidden="true"></i>Logout</a>
+  <a href="/admin//logout"><i class="fa fa-sign-out" style="margin-right: 10px;" aria-hidden="true"></i>Logout</a>
 </div>
 
 
@@ -102,7 +102,7 @@
               </div>
               <div class="form-check">
                 <input class="form-check-input" type="radio" name="fileFormat" id="excel" value="excel">
-                <label class="form-check-label" for="excel">Excel</label>
+               
               </div>
             </div>
         </div>
