--- a/views/admin/adminproduct.ejs
+++ b/views/admin/adminproduct.ejs
@@ -12,7 +12,8 @@
     <a href="/admin/brand"><i class="fa fa-users" style="margin-right: 10px;" aria-hidden="true"></i>Brand</a>
     <a href="/admin/order"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Orders</a>
     <a href="/admin/coupon"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Coupons</a>
-    <a href="/admin/productoffer"><i class="fa fa-sign-out" style="margin-right: 10px;" aria-hidden="true"></i>ProductOffer</a>
+    <a href="/admin/banner"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Banners</a>
+    <!-- <a href="/admin/productoffer"><i class="fa fa-sign-out" style="margin-right: 10px;" aria-hidden="true"></i>ProductOffer</a> -->
     <a href="/admin/sales"><i class="fa fa-line-chart" style="margin-right: 10px;" aria-hidden="true"></i>Sales</a>
     <a href="admin/adminlogin"><i class="fa fa-sign-out" style="margin-right: 10px;" aria-hidden="true"></i>Logout</a>
   </div> 
@@ -42,7 +43,7 @@
                         <th>Category</th>
                         <th>Image</th>
                         <th>Price</th>
-                        <th>Discount Amount</th>
+                        <!-- <th>Discount Amount</th> -->
                         <th>Available Quantity</th>
                         <th>Edit</th>
                         <th>Action</th>
@@ -73,12 +74,12 @@
                                     <img src="/uploads/<%= product.images [0] %>" alt="Product Image"
                                         style="max-width: 100px; height: auto;">
                                 </td>
-                                <td class="text-danger"><del>
+                                <td class="text-secondary">
                                         <%= product.Price %>
-                                    </del></td>
-                                <td class="text-success">
+                                    </td>
+                                <!-- <td class="text-success">
                                     <%= product.DiscountAmount %>
-                                </td>
+                                </td> -->
                                 <td>
                                     <%= product.AvailableQuantity %>
                                 </td>
