--- a/views/admin/customers.ejs
+++ b/views/admin/customers.ejs
@@ -16,8 +16,10 @@
                             aria-hidden="true"></i>Orders</a>
                     <a href="/admin/coupon"><i class="fa fa-bars" style="margin-right: 10px;"
                                 aria-hidden="true"></i>Coupons</a>
-                    <a href="/admin/productoffer"><i class="fa fa-bars" style="margin-right: 10px;"
-                                    aria-hidden="true"></i>ProductOffer</a>
+                                <a href="/admin/banner"><i class="fa fa-bars" style="margin-right: 10px;"
+                                    aria-hidden="true"></i>Banners</a>
+                    <!-- <a href="/admin/productoffer"><i class="fa fa-bars" style="margin-right: 10px;"
+                                    aria-hidden="true"></i>ProductOffer</a> -->
                     <a href="/admin/sales"><i class="fa fa-line-chart" style="margin-right: 10px;"
                             aria-hidden="true"></i>Sales</a>
                     <a href="admin/adminlogin"><i class="fa fa-sign-out" style="margin-right: 10px;"
