--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -15,7 +15,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
+<style>
 
+.footer-fixed {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #f8f9fa; /* Adjust the background color as needed */
+  padding: 20px; /* Adjust the padding as needed */
+  text-align: center;
+}
+</style>
 <body>
 
   <%- include('../partials/navbar') %>
@@ -98,7 +109,7 @@
   <% } %>
   <input type="number" class="form-control allQuantity" value="<%= item.quantity %>" id="cartQuantity<%= item._id %>" min="1" max="<%= item.productId?.AvailableQuantity || 1 %>" onchange="updateCartQuantity('<%= item._id %>', this.value)">
   <% if (item.quantity >= item.productId?.AvailableQuantity) { %>
-    <button disabled class="btn btn-dark btn-sm" type="button" onclick="updateCartQuantity('<%= item._id %>', 1)">+</button>
+    <button class="btn btn-dark btn-sm" type="button" onclick="notInStock('<%= item._id %>', 1)">+</button>
   <% } else { %>
     <button class="btn btn-dark btn-sm" type="button" onclick="updateCartQuantity('<%= item._id %>', 1)">+</button>
   <% } %>
@@ -106,7 +117,7 @@
 
 <% if (item.productId?.AvailableQuantity == 0) { %>
     <p class="text-danger">Out of Stock</p>
-  <% } %>
+    <% } %>
 
                         
                         </td>
@@ -224,6 +235,17 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer-fixed">
+  <%- include('../partials/user-footer')  %>
+  </footer>
+  <style>
+    input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+    </style>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Include SweetAlert library -->
@@ -303,6 +325,11 @@
       console.error('Error updating quantity:', error);
       // Optionally, show an error message to the user
     });
+}
+
+function notInStock() {
+  Swal.fire("Error!", "Quantity exceeded", "error");
+  return;
 }
 
 
@@ -413,7 +440,6 @@
 </script>
 
 
-</html>
 
 
 
