--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -92,8 +92,7 @@
             <a href="/orders" class="list-group-item list-group-item-action"><b>Orders</b></a><br>
             <ul class="pl-4">
                 <li><a href="/orders" class="list-group-item list-group-item-action" style="list-style: none;">My Orders</a></li>
-                <li><a href="/returns" class="list-group-item list-group-item-action">Returns</a></li>
-                <li><a href="/cancellations" class="list-group-item list-group-item-action">Cancellations</a></li>
+                
                
               </ul>
             <a href="/cart" class="list-group-item list-group-item-action"><b>Cart</a></b><br>
@@ -108,22 +107,22 @@
             <hr class="mt-0 mb-4">
             <div class="row">
               
-                <div class="col-xl-3" style="height: 250px;"> <!-- Reduced column size to 3/12 -->
+                <!-- <div class="col-xl-3" style="height: 250px;"> Reduced column size to 3/12 -->
                     <!-- Profile picture card -->
-                    <div class="card mb-4">
+                    <!-- <div class="card mb-4">
                         <div class="card-header">Profile Picture</div>
                         <div class="card-body text-center">
-                            <form id="profileForm" enctype="multipart/form-data">
+                            <form id="profileForm" enctype="multipart/form-data"> -->
                                 <!-- Profile picture image -->
-                                <img class="img-account-profile rounded-circle mb-2" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
+                                <!-- <img class="img-account-profile rounded-circle mb-2" src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar"> -->
                                                                     
-                                <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
+                                <!-- <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div> -->
                                 <!-- Profile picture upload button -->
-                                <button class="btn btn-primary" type="button">Upload new image</button>
+                                <!-- <button class="btn btn-primary" type="button">Upload new image</button>
                             </form>
                         </div>
-                    </div>
-                </div>
+                    </div> -->
+                <!-- </div> -->
                 
               <div class="col-xl-8">
                   <!-- Account details card-->
@@ -166,7 +165,7 @@
         </div>
           <div>
           <h6>Your referral link : </h6>
-          <h6 class="text-primary" id="referral-link">localhost:8474/signup/<%=user._id%> </h6>
+          <h6 class="text-primary" id="referral-link">bagsvio.shop/signup/<%=user._id%> </h6>
           </div>
           <div class="p-4">
           <button id="copyButton" class=" border-0">copy</button>
