--- a/views/user/userlog.ejs
+++ b/views/user/userlog.ejs
@@ -1,4 +1,5 @@
 <%- include('header')-%>
+<%- include('../partials/navbar') %>
 
 <div class="container">
   <div class="row m-5 justify-content-center">
@@ -34,5 +35,5 @@
     </div>
   </div>
 </div>
-
+<%- include('../partials/user-footer') %>
 <%- include('footer')-%>
