--- a/views/user/usersignup.ejs
+++ b/views/user/usersignup.ejs
@@ -1,5 +1,5 @@
 <%- include('header')-%>
-
+<%- include('../partials/navbar') %>
 <div class="container">
     <div class="row m-5 justify-content-center">
       <div class="col-md-6 bg-white p-5 shadow-lg">
@@ -195,5 +195,5 @@
 
 
   </script> -->
-  
+  <%- include('../partials/user-footer') %>
   <%- include('footer')-%>
