--- a/views/user/wishlist1.ejs
+++ b/views/user/wishlist1.ejs
@@ -164,58 +164,7 @@
   <!-- Navbar/Header (Assuming the header is included using an external file) -->
   <div style="height: 40px;"></div>
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="/assets/images/logo.png" alt="Logo" height="40">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/userhome">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Category
-            </a>
-            <% console.log(categories); %>
-            <ul class="dropdown-menu">
-              
-              <% categories.forEach(category => { %>
-                <% if (!category.isBlocked) { %>
-                <li><a class="dropdown-item" href="/products/<%= category.categoryName %>"><%= category.categoryName %></a></li>
-                <% } %>
-                <% }); %> 
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contacts</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search" style="margin-right: 10px;">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-        <div class="icons">
-          <a href="/profile">
-            <i class="fa fa-user text-dark" aria-hidden="true"></i>
-          </a>
-          <a href="/cart">
-            <i class="fa fa-shopping-cart text-dark" aria-hidden="true"></i>
-          </a>
-          <a href="#">
-            <i class="fa fa-heart text-dark" aria-hidden="true"></i>
-          </a>
-        </div>
-      </div>
-    </div>
-  </nav>
+  <%- include('../partials/navbar') %>
 
 
 
@@ -356,6 +305,10 @@
 </script> -->
 </body>
 </html>
+<!-- Footer -->
+<footer class="fixed-bottom">
+  <%- include('../partials/user-footer') %>
+</footer>
 
   
 
