--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -29,6 +29,9 @@
             </ul>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/seeallproducts">See All Products</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Contacts</a>
           </li>
         </ul>
