--- a/views/user/changepassword.ejs
+++ b/views/user/changepassword.ejs
@@ -57,6 +57,12 @@
 
       <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
         <!-- Change Password Form -->
+        <% if (typeof err !== 'undefined') { %>
+          <div class="alert alert-danger" role="alert">
+            <%= err %>
+          </div>
+        <% } %>
+
         <div class="container mt-5">
           <div class="row justify-content-center">
             <div class="col-md-6">
